# riverland

./: .gitignore  README.md  SQ.md
LinarTyped1/: Expr.agda  Substitution.agda  Types.agda
LinearTyped0/: Expr.agda  Substitution.agda  Types.agda  Typing.agda
LinearTyped0+/: Expr.agda  Substitution.agda  Types.agda  Typing.agda  todo.md
LinearTyped1/: Expr.agda  Structural.agda  Substitution.agda  Types.agda  Typing.agda
LinearTyped2/: Ctx.agda  MayUseful.agda  Structural.agda  Structural_backup.agda  Substitution.agda  Types.agda  Typing.agda
LinearTyped3/: Auxiliaries.agda  Ctx.agda  Expr.agda  FVar.agda  Reduction.agda  Structural.agda  Substitution.agda  Types.agda  Typing.agda
Simple/: Expr.agda  Reduction.agda  Substitution.agda
SimplyTyped/: Expr.agda  LJ.agda  NJ.agda  Substitution.agda  TypeSafety.agda  Typing.agda
Typed/: Expr.agda  Substitution.agda  Typing.agda
Untyped/: LocallyClosed.agda
doc/: 01.aux  01.bbl  01.blg  01.dvi  01.tex  02.aux  02.bbl  02.blg  03.tex  04.tex  04_code.tex  ref.bib  splncs03.bst
doc/_minted-04/: 6B39CC4C1193A06F1D65F53F209E1ABD7AFDB9F9E408E0E46912F95E13AC9FE6.pygtex
exp/bang0/: Subs.hs
exp/bang1/: Ctx.hs  Eval.hs  EvalR.hs  Expr.hs  Func.hs  Pat.hs  REval.hs
exp/bang2/: Ctx.hs  Env.hs  Eval.hs  Expr.hs  Func.hs  Pat.hs  Rval.hs  Shell.hs
exp/bang3/: Env.hs  Eval.hs  Expr.hs  Func.hs  Pat.hs  Rval.hs  Shell.hs
exp/bang4/: Env.hs  Eval.hs  Expr.hs  Func.hs  Pat.hs  (+3 more)
exp/bang6/: Ctx.hs  Error.hs  Eval.hs  Expr.hs  Func.hs  Match.hs  Shell.hs  TODO.md  Types.hs  Typing.hs  Util.hs  bang6.cabal
exp/cont/: Expr.hs  README.md  cont.cabal
exp/cont/src/: Cont.hs  Eval.hs  Expr.hs  Free.hs  Func.hs  Rval.hs  Typing.hs
exp/cont/test/: Spec.hs
haskell/: Ctx.hs  Expr.hs  Func.hs  Preset.hs  RedB.hs  RedR.hs  Subs.hs
(+41 files in other folders)
