name:                cont
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cont#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules: Cont
                 , Expr
                 , Func
                 , Eval
                 , Rval
                 , Typing
  build-depends: base >= 4.7 && < 5
               , mtl >= 2.2
  ghc-options:         -w
  default-language:    Haskell2010

test-suite cont-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends: base
               , cont
               , hspec
               , mtl >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cont
